--- a/index.html
+++ b/index.html
@@ -73,18 +73,52 @@
                     <li class="contact__navigation-item">
                       <a
                         class="contact__navigation-link"
-                        href="tel:+38 044 111 11 11"
+                        href="tel:+380441111111"
                         >+38 044 111 11 11</a
                       >
                     </li>
                     <li class="contact__navigation-item">
-                      <button class="btn">
+                      <button class="btn top__btn">
                         <a class="contact__navigation-link" href="#"
                           >онлайн-запись</a
                         >
                       </button>
                     </li>
                   </ul>
+                </div>
+                <div class="main__navigation-overlay">
+                  <div class="overlay__box">
+                    <ul class="main__navigation-overlay overlay__list">
+                      <li class="main__navigation-item overlay__item">
+                        <a class="main__navigation-link" href="">О нас</a>
+                      </li>
+                      <li class="main__navigation-item overlay__item">
+                        <a class="main__navigation-link" href=""
+                          >Услуги и цены</a
+                        >
+                      </li>
+                      <li class="main__navigation-item overlay__item">
+                        <a class="main__navigation-link" href="">Мастера</a>
+                      </li>
+                      <li class="main__navigation-item overlay__item">
+                        <a class="main__navigation-link" href="">Контакты</a>
+                      </li>
+                      <li class="contact__navigation-item overlay__item">
+                        <a
+                          class="contact__navigation-link"
+                          href="tel:+380441111111"
+                          >+38 044 111 11 11</a
+                        >
+                      </li>
+                      <li class="contact__navigation-item overlay__item">
+                        <button class="btn top__btn">
+                          <a class="contact__navigation-link" href="#"
+                            >онлайн-запись</a
+                          >
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
               <div class="navhero">
@@ -106,7 +140,7 @@
                 <div class="navhero__slider">
                   <div class="navhero__slider-lines">
                     <img
-                      src="./images/Slider Navigation_1.svg"
+                      src="./images/SliderNavigation_1.svg"
                       alt="Slider Navigation"
                     />
                   </div>
