--- a/index.html
+++ b/index.html
@@ -83,42 +83,46 @@
                           >онлайн-запись</a
                         >
                       </button>
+                      <div class="main__navigation-overlay">
+                        <div class="overlay__box">
+                          <ul class="main__navigation-overlay overlay__list">
+                            <li class="main__navigation-item overlay__item">
+                              <a class="main__navigation-link" href="">О нас</a>
+                            </li>
+                            <li class="main__navigation-item overlay__item">
+                              <a class="main__navigation-link" href=""
+                                >Услуги и цены</a
+                              >
+                            </li>
+                            <li class="main__navigation-item overlay__item">
+                              <a class="main__navigation-link" href=""
+                                >Мастера</a
+                              >
+                            </li>
+                            <li class="main__navigation-item overlay__item">
+                              <a class="main__navigation-link" href=""
+                                >Контакты</a
+                              >
+                            </li>
+                            <li class="contact__navigation-item overlay__item">
+                              <a
+                                class="contact__navigation-link"
+                                href="tel:+380441111111"
+                                >+38 044 111 11 11</a
+                              >
+                            </li>
+                            <li class="contact__navigation-item overlay__item">
+                              <button class="btn top__btn">
+                                <a class="contact__navigation-link" href="#"
+                                  >онлайн-запись</a
+                                >
+                              </button>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
                     </li>
                   </ul>
-                </div>
-                <div class="main__navigation-overlay">
-                  <div class="overlay__box">
-                    <ul class="main__navigation-overlay overlay__list">
-                      <li class="main__navigation-item overlay__item">
-                        <a class="main__navigation-link" href="">О нас</a>
-                      </li>
-                      <li class="main__navigation-item overlay__item">
-                        <a class="main__navigation-link" href=""
-                          >Услуги и цены</a
-                        >
-                      </li>
-                      <li class="main__navigation-item overlay__item">
-                        <a class="main__navigation-link" href="">Мастера</a>
-                      </li>
-                      <li class="main__navigation-item overlay__item">
-                        <a class="main__navigation-link" href="">Контакты</a>
-                      </li>
-                      <li class="contact__navigation-item overlay__item">
-                        <a
-                          class="contact__navigation-link"
-                          href="tel:+380441111111"
-                          >+38 044 111 11 11</a
-                        >
-                      </li>
-                      <li class="contact__navigation-item overlay__item">
-                        <button class="btn top__btn">
-                          <a class="contact__navigation-link" href="#"
-                            >онлайн-запись</a
-                          >
-                        </button>
-                      </li>
-                    </ul>
-                  </div>
                 </div>
               </div>
               <div class="navhero">
@@ -160,7 +164,344 @@
       </header>
 
       <main class="main">
-        <div class="container"></div>
+        <div class="container">
+          <div class="main__discription">
+            <div class="main__discription-image">
+              <img src="./images/main1.jpg" alt="barber" />
+              <img src="./images/main2.jpg" alt="barber" />
+            </div>
+            <div class="main__disription-text">
+              <div class="main__disription-subtitle">
+                <div class="line-discription"></div>
+                <h6>О НАС</h6>
+              </div>
+              <h3 class="main__disription-title">
+                Лучший Барбершоп твоего города
+              </h3>
+              <p class="main__disription-textbig">
+                Если ты хочешь добавить в свой образ больше уверенности – тебе
+                точно к нам.
+              </p>
+              <p class="main__disription-textsmall">
+                Мы команда, которая никогда не останавливается на достигнутом и
+                жаждет перемен. И когда ты попадешь в руки нашего мастера, то
+                уже никогда не сможешь быть прежним. Мы команда, которая всегда
+                с клиентами "на одной волне". Поэтому, мы всегда готовы
+                усовершенствовать каждого, кто к нам приходит!
+              </p>
+              <button class="btn black__button">
+                <a class="contact__navigation-link" href="#">онлайн-запись</a>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="price-background">
+          <div class="container">
+            <div class="main__price">
+              <div class="main__price-subtitle">
+                <div class="price__line"></div>
+                <h6>Проведи время в компании лучших мастеров</h6>
+              </div>
+              <div class="main__price-title">
+                <h3>Услуги и цены</h3>
+              </div>
+              <div class="main__price-column">
+                <div class="main__price-left">
+                  <ul class="main__price-lists1">
+                    <li class="main__price-items">
+                      <ul class="main__price-list">
+                        <li class="main__price-item">Мужская стрижка</li>
+                        <li class="main__price-itemline">
+                          _________________________________
+                        </li>
+                        <li class="main__price-item">от 300 грн.</li>
+                      </ul>
+                    </li>
+                    <li class="main__price-items">
+                      <ul class="main__price-list">
+                        <li class="main__price-item">Стрижка бороды</li>
+                        <li class="main__price-itemline">
+                          ___________________________________
+                        </li>
+                        <li class="main__price-item">от 200 грн.</li>
+                      </ul>
+                    </li>
+                    <li class="main__price-items">
+                      <ul class="main__price-list">
+                        <li class="main__price-item">Стрижка усов</li>
+                        <li class="main__price-itemline">
+                          _______________________________________
+                        </li>
+                        <li class="main__price-item">от 200 грн.</li>
+                      </ul>
+                    </li>
+                    <li class="main__price-items">
+                      <ul class="main__price-list">
+                        <li class="main__price-item">Бритье опасной бритвой</li>
+                        <li class="main__price-itemline">
+                          ________________________
+                        </li>
+                        <li class="main__price-item">от 200 грн.</li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+                <div class="main__price-right">
+                  <ul class="main__price-lists2">
+                    <li class="main__price-items">
+                      <ul class="main__price-list">
+                        <li class="main__price-item">Cтрижка у стажера</li>
+                        <li class="main__price-itemline">
+                          ___________________________________
+                        </li>
+                        <li class="main__price-item">от 50 грн.</li>
+                      </ul>
+                    </li>
+                    <li class="main__price-items">
+                      <ul class="main__price-list">
+                        <li class="main__price-item">Стрижка под насадку</li>
+                        <li class="main__price-itemline">
+                          ______________________________
+                        </li>
+                        <li class="main__price-item">от 200 грн.</li>
+                      </ul>
+                    </li>
+                    <li class="main__price-items">
+                      <ul class="main__price-list">
+                        <li class="main__price-item">
+                          Детская стрижка (до 12 лет)
+                        </li>
+                        <li class="main__price-itemline">
+                          _____________________
+                        </li>
+                        <li class="main__price-item">от 300 грн.</li>
+                      </ul>
+                    </li>
+                    <li class="main__price-items">
+                      <ul class="main__price-list">
+                        <li class="main__price-item">Камуфлирование седины</li>
+                        <li class="main__price-itemline">
+                          _______________________
+                        </li>
+                        <li class="main__price-item">от 200 грн.</li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="price__button">
+                <button class="btn">
+                  <a class="contact__navigation-link" href="#">онлайн-запись</a>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="info">
+            <div class="info__boxes">
+              <ul class="info__boxes-list">
+                <li class="info__boxes-item">
+                  <p class="info__boxes-number">600</p>
+                  <p class="info__boxes-text">Довольных клиентов в день</p>
+                </li>
+                <li class="info__boxes-item">
+                  <p class="info__boxes-number">50</p>
+                  <p class="info__boxes-text">Наград за отличный сервис</p>
+                </li>
+                <li class="info__boxes-item">
+                  <p class="info__boxes-number">20</p>
+                  <p class="info__boxes-text">Лучших мастеров Киева</p>
+                </li>
+                <li class="info__boxes-item">
+                  <p class="info__boxes-number">100</p>
+                  <p class="info__boxes-text">Подарков постоянным клиентам</p>
+                </li>
+              </ul>
+            </div>
+            <div class="info__text">
+              <div class="info__text-subtitle">
+                <div class="info__text-line"></div>
+                <h6>старая традиционная школа</h6>
+              </div>
+              <div class="info__text-title">
+                <h3>Почему приходят именно к нам?</h3>
+              </div>
+              <div class="info__text-other">
+                <p>
+                  О нас говорят только хорошее. Но лучше 1 раз увидеть и
+                  прочувствовать, чем 10 раз прочитать.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="masters">
+            <div class="masters__subtitle">
+              <div class="masters__line"></div>
+              <h6>для настоящих ценителей атмосферы</h6>
+            </div>
+            <div class="masters__title"><h3>Наши мастера</h3></div>
+            <div class="masters__content">
+              <div class="masters__box-area">
+                <div class="masters__box">
+                  <div class="masters__portfolio">
+                    <img
+                      src="./images/master1.jpg"
+                      alt="master"
+                      class="masters__portfolio-image"
+                    />
+                    <p class="master__portfolio-text1">John Smith</p>
+                    <p class="master__portfolio-text2">Extreme Barber</p>
+                  </div>
+                  <div class="masters__social">
+                    <div class="instagram">
+                      <a class="masters__social-link" href="#">
+                        <svg class="cosial__svg" width="20" height="20">
+                          <use href="./images/icons.svg#insta" />
+                        </svg>
+                      </a>
+                    </div>
+                    <div class="twitter">
+                      <a class="masters__social-link" href="#">
+                        <svg class="cosial__svg" width="20" height="20">
+                          <use href="./images/icons.svg#twit" />
+                        </svg>
+                      </a>
+                    </div>
+                    <div class="facebook">
+                      <a class="masters__social-link" href="#">
+                        <svg class="cosial__svg" width="20" height="20">
+                          <use href="./images/icons.svg#fb" />
+                        </svg>
+                      </a>
+                    </div>
+                    <div class="linkedin">
+                      <a class="masters__social-link" href="#">
+                        <svg class="cosial__svg" width="20" height="20">
+                          <use href="./images/icons.svg#in" />
+                        </svg>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="masters__box">
+                  <div class="masters__portfolio">
+                    <img
+                      src="./images/master2.jpg"
+                      alt="master"
+                      class="masters__portfolio-image"
+                    />
+                    <p class="master__portfolio-text1">Michele Doe</p>
+                    <p class="master__portfolio-text2">Extreme Barber</p>
+                  </div>
+                  <div class="masters__social">
+                    <div class="instagram">
+                      <a class="masters__social-link" href="#">
+                        <svg class="cosial__svg" width="20" height="20">
+                          <use href="./images/icons.svg#insta" />
+                        </svg>
+                      </a>
+                    </div>
+                    <div class="twitter">
+                      <a class="masters__social-link" href="#">
+                        <svg class="cosial__svg" width="20" height="20">
+                          <use href="./images/icons.svg#twit" />
+                        </svg>
+                      </a>
+                    </div>
+                    <div class="facebook">
+                      <a class="masters__social-link" href="#">
+                        <svg class="cosial__svg" width="20" height="20">
+                          <use href="./images/icons.svg#fb" />
+                        </svg>
+                      </a>
+                    </div>
+                    <div class="linkedin">
+                      <a class="masters__social-link" href="#">
+                        <svg class="cosial__svg" width="20" height="20">
+                          <use href="./images/icons.svg#in" />
+                        </svg>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="masters__box">
+                  <div class="masters__portfolio">
+                    <img
+                      src="./images/master3.jpg"
+                      alt="master"
+                      class="masters__portfolio-image"
+                    />
+                    <p class="master__portfolio-text1">Alan Black</p>
+                    <p class="master__portfolio-text2">Extreme Barber</p>
+                  </div>
+                  <div class="masters__social">
+                    <div class="instagram">
+                      <a class="masters__social-link" href="#">
+                        <svg class="cosial__svg" width="20" height="20">
+                          <use href="./images/icons.svg#insta" />
+                        </svg>
+                      </a>
+                    </div>
+                    <div class="twitter">
+                      <a class="masters__social-link" href="#">
+                        <svg class="cosial__svg" width="20" height="20">
+                          <use href="./images/icons.svg#twit" />
+                        </svg>
+                      </a>
+                    </div>
+                    <div class="facebook">
+                      <a class="masters__social-link" href="#">
+                        <svg class="cosial__svg" width="20" height="20">
+                          <use href="./images/icons.svg#fb" />
+                        </svg>
+                      </a>
+                    </div>
+                    <div class="linkedin">
+                      <a class="masters__social-link" href="#">
+                        <svg class="cosial__svg" width="20" height="20">
+                          <use href="./images/icons.svg#in" />
+                        </svg>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="foto">
+            <div class="foto__text">
+              <div class="foto__text-line"></div>
+              <h6>На латинском языке “барба” означает “борода”</h6>
+            </div>
+            <div class="foto__content">
+              <img
+                src="./images/foto1.png"
+                alt="foto"
+                class="foto__content-image"
+              />
+              <img
+                src="./images/foto2.png"
+                alt="foto"
+                class="foto__content-image"
+              />
+              <img
+                src="./images/foto3.png"
+                alt="foto"
+                class="foto__content-image"
+              />
+              <img
+                src="./images/foto4.png"
+                alt="foto"
+                class="foto__content-image"
+              />
+            </div>
+          </div>
+        </div>
       </main>
       <footer class="footer">
         <div class="container"></div>
