--- a/index.html
+++ b/index.html
@@ -502,9 +502,92 @@
             </div>
           </div>
         </div>
+        <div class="feedback__container">
+          <div class="container">
+            <div class="feedback">
+              <div class="feedback__form">
+                <div class="feedback__form-title">
+                  <h3>Онлайн-запись</h3>
+                </div>
+                <div class="feedback__form-place">
+                  <form class="form__nametel">
+                    <input
+                      class="nametel__input"
+                      type="text"
+                      name="name"
+                      placeholder="Имя*"
+                    />
+                    <input
+                      class="nametel__input"
+                      type="tel"
+                      name="tel"
+                      placeholder="Телефон*"
+                    />
+                  </form>
+
+                  <form class="form__message">
+                    <textarea
+                      class="textarea__message"
+                      name="massage"
+                      rows="3"
+                      placeholder="сообщение"
+                    ></textarea>
+                  </form>
+                </div>
+                <div class="feedback__button">
+                  <button class="btn">
+                    <a class="contact__navigation-link" href="#">отправить</a>
+                  </button>
+                </div>
+              </div>
+              <div class="feedback__contact">
+                <div class="feedback__contact-title"><h3>Контакты</h3></div>
+                <div class="feedback__contact-items">
+                  <div class="feedback__contact-items">
+                    <div class="feedback__contact-adress">
+                      <img src="./images/map-pin.svg" alt="map" />
+                      <a href="#">ул. Васильковая, 7А Киев, 08132</a>
+                    </div>
+                    <div class="feedback__contact-tel">
+                      <img src="./images/phone.svg" alt="phone" />
+                      <a href="tel:+380441111111">+38 044 111 11 11</a>
+                    </div>
+                    <div class="feedback__contact-mail">
+                      <img src="./images/mail.svg" alt="mail" />
+                      <a href="tomail">barbershop@email.com</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="feedback__contact-time">
+                  <div class="feedback__contact-line"></div>
+                  <h6>время работы</h6>
+                </div>
+                <div class="feedback__contact-timework">
+                  Ежедневно с 9:00 до 22:00
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer class="footer">
-        <div class="container"></div>
+        <div class="container">
+          <div class="footer__items">
+            <div class="footer__rights">
+              <img src="./images/copyright.svg" alt="" />
+              <p>Copyright 2020</p>
+            </div>
+            <div class="footer__social">
+              <div class="footer__social-line"></div>
+              <a class="leftnav__link" href="#">Instagram</a>
+              <a
+                class="leftnav__link"
+                href="https://www.youtube.com/watch?v=085sSdwvl2k&ab_channel=%D0%9D%D0%B5%D0%B9%D1%80%D0%BE%D1%81%D0%B5%D1%82%D1%8C%D1%88%D0%B0%D0%BB%D0%B8%D1%82"
+                >Youtube</a
+              >
+            </div>
+          </div>
+        </div>
       </footer>
     </div>
     <script src="./js/script.js"></script>
