--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
             </div>
           </div>
         </div>
-        <div class="container">
-          <div class="masters">
+        <div class="masters">
+          <div class="container">
             <div class="masters__subtitle">
               <div class="masters__line"></div>
               <h6>для настоящих ценителей атмосферы</h6>
@@ -535,7 +535,7 @@
                   </form>
                 </div>
                 <div class="feedback__button">
-                  <button class="btn">
+                  <button type="submit" class="btn">
                     <a class="contact__navigation-link" href="#">отправить</a>
                   </button>
                 </div>
